@@ -8,6 +8,7 @@ Changes in 1.4.4-stable:
  o introduce bufferevent_setcb and bufferevent_setfd to allow better manipulation of bufferevents
  o use libevent's internal timercmp on all platforms, to avoid bugs on old platforms where timercmp(a,b,<=) is buggy.
  o reduce system calls for getting current time by caching it.
+ o separate signal events from io events; making the code less complex.
 
 
 Changes in 1.4.3-stable:
